samples/bad/bad030.lat
//Function redeclaration
int main() {
  int x;
  int x;
	return 0 ;
}

int f() {
  return 0;
}

int f() {
  return 0;
}